fix: 解决升级 SpringBoot 后的问题
hibernate 文件对象序列化与缓存问题